; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_axp20x_usb_power.c_axp813_get_current_max.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_axp20x_usb_power.c_axp813_get_current_max.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.axp20x_usb_power = type { i32 }

@AXP20X_VBUS_IPSOUT_MGMT = common dso_local global i32 0, align 4
@AXP20X_VBUS_CLIMIT_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.axp20x_usb_power*, i32*)* @axp813_get_current_max to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @axp813_get_current_max(%struct.axp20x_usb_power* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.axp20x_usb_power*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.axp20x_usb_power* %0, %struct.axp20x_usb_power** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.axp20x_usb_power*, %struct.axp20x_usb_power** %4, align 8
  %9 = getelementptr inbounds %struct.axp20x_usb_power, %struct.axp20x_usb_power* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @AXP20X_VBUS_IPSOUT_MGMT, align 4
  %12 = call i32 @regmap_read(i32 %10, i32 %11, i32* %6)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* %7, align 4
  store i32 %16, i32* %3, align 4
  br label %30

17:                                               ; preds = %2
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @AXP20X_VBUS_CLIMIT_MASK, align 4
  %20 = and i32 %18, %19
  switch i32 %20, label %29 [
    i32 128, label %21
    i32 131, label %23
    i32 130, label %25
    i32 129, label %27
  ]

21:                                               ; preds = %17
  %22 = load i32*, i32** %5, align 8
  store i32 900000, i32* %22, align 4
  br label %29

23:                                               ; preds = %17
  %24 = load i32*, i32** %5, align 8
  store i32 1500000, i32* %24, align 4
  br label %29

25:                                               ; preds = %17
  %26 = load i32*, i32** %5, align 8
  store i32 2000000, i32* %26, align 4
  br label %29

27:                                               ; preds = %17
  %28 = load i32*, i32** %5, align 8
  store i32 2500000, i32* %28, align 4
  br label %29

29:                                               ; preds = %17, %27, %25, %23, %21
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %15
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @regmap_read(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
